--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "json2excel"
+  ],
+  "author": "chendq",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chandq/json2excel-cli"
+  },
   "license": "ISC",
   "dependencies": {
     "chalk": "^3.0.0",
