--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "json2excel-cli",
+  "name": "json-excel-cli",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -17,7 +17,7 @@
     "type": "git",
     "url": "https://github.com/chandq/json2excel-cli"
   },
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "chalk": "^3.0.0",
     "commander": "^5.0.0",
