--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json-excel-cli",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Convert language json file to excel file, convert excel file to language json file",
   "main": "index.js",
   "bin": {
@@ -14,7 +14,8 @@
     "excel",
     "internationalization",
     "json2excel",
-    "json-excel-cli"
+    "json-excel-cli",
+    "lightweight"
   ],
   "author": "chendq",
   "repository": {
@@ -22,6 +23,7 @@
     "url": "https://github.com/chandq/json2excel-cli"
   },
   "license": "MIT",
+  "homepage": "https://github.com/chandq/json2excel-cli#readme",
   "dependencies": {
     "chalk": "^3.0.0",
     "commander": "^5.0.0",
