--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "json-excel-cli",
-  "version": "1.0.7",
-  "description": "Convert language json file to excel file, convert excel file to language json file",
+  "version": "1.0.8",
+  "description": "Support multi-language file and Chinese-English comparison table excel file conversion",
   "main": "index.js",
   "bin": {
     "json2excel": "./bin/json2excel.js"
@@ -10,19 +10,30 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "json",
-    "excel",
+    "MIT-licensed",
+    "JSON",
+    "JS",
+    "Excel",
+    "XLS",
+    "XLSX",
     "internationalization",
     "json2excel",
     "json-excel-cli",
-    "lightweight"
+    "lightweight",
+    "CLI",
+    "transform"
   ],
   "author": "chendq",
   "repository": {
     "type": "git",
     "url": "https://github.com/chandq/json2excel-cli"
   },
-  "license": "MIT",
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/chandq/json2excel-cli#license"
+    }
+  ],
   "homepage": "https://github.com/chandq/json2excel-cli#readme",
   "dependencies": {
     "chalk": "^3.0.0",
