--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-registry = https://registry.npm.taobao.org
+# registry = https://registry.npm.taobao.org
 sass_binary_site=https://npm.taobao.org/mirrors/node-sass/
