--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: node_js
 sudo: true
 node_js:
-  - '10.1.1'
+  - '12.16.0'
 cache:
   directories:
     - node_modules
 before_install:
-  - npm install
+  - npm i
 script:
   - npm test
 after_script:
