--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "bin": {
     "json2excel": "./bin/json2excel.js"
   },
+  "packageManager": "yarn@1.22.19",
   "scripts": {
     "xo-lint": "xo",
     "xo-fix": "xo --fix",
@@ -14,7 +15,7 @@
     "fix": "eslint --ext .js,.vue,.css --fix",
     "release:prerelease": "standard-version --prerelease",
     "release:prefix": "standard-version --prerelease alpha",
-    "release:patch": "standard-version --release-as patch && git push origin master && npm publish",
+    "release:patch": "standard-version --release-as patch && git push --follow-tags origin master",
     "release:minor": "standard-version --release-as minor && git push --follow-tags origin master",
     "release:major": "standard-version --release-as major && git push --follow-tags origin master"
   },
@@ -32,6 +33,9 @@
     "CLI",
     "transform"
   ],
+  "engines": {
+    "node": ">=12"
+  },
   "author": "chendq",
   "repository": {
     "type": "git",
@@ -53,11 +57,12 @@
     "babel-eslint": "^10.1.0",
     "coveralls": "^3.1.0",
     "eslint": "^7.0.0",
+    "eslint-config-xo": "^0.43.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.2",
     "nyc": "^15.0.1",
     "standard-version": "^8.0.0",
-    "xo": "^0.30.0"
+    "xo": "0.24.0"
   },
   "xo": {
     "space": true,
@@ -79,7 +84,8 @@
       "unicorn/prefer-string-slice": 0,
       "prefer-const": 0,
       "unicorn/prefer-number-properties": 0,
-      "capitalized-comments": 0
+      "capitalized-comments": 0,
+      "promise/prefer-await-to-then": 0
     },
     "ignores": [
       "examples/**/*"
