--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "release:minor": "standard-version --release-as minor && git push --follow-tags origin master",
     "release:major": "standard-version --release-as major && git push --follow-tags origin master"
   },
+  "files": [
+    "packages/lib",
+    "bin"
+  ],
   "keywords": [
     "MIT-licensed",
     "JSON",
